--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 dirs = "6.0.0"
 anyhow = "1.0.98"
+strum = { version = "0.27.1", features = ["derive"] }
