--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ serde_json = "1.0.149"
 dirs = "6.0.0"
 anyhow = "1.0.100"
 strum = { version = "0.27.2", features = ["derive"] }
+jiff = { version = "0.2.18", features = ["serde"] }
